Update Github Actions file

--- a/github/workflows/github-actions-demo.yml
+++ b/github/workflows/github-actions-demo.yml
@@ -15,4 +15,7 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - run: |
+        npm ci
+        npm run test:unit
       - run: echo "🍏 This job's status is ${{ job.status }}."
