--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
     steps:
       - run: echo "🧨 Execute project test block"
       - run: |
-          npm ci
+          npm install
           npm run test:unit
       - run: echo "⚙️ This job's status is ${{ job.status }}."
