--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🧨 Execute project test block"
-      - run: |
-          npm install
-          npm run test:unit
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run test:unit
       - run: echo "⚙️ This job's status is ${{ job.status }}."
